--- a/src/main/java/com/example/stuwebapp/feed.fxml
+++ b/src/main/java/com/example/stuwebapp/feed.fxml
@@ -1,14 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.stuwebapp.Feed"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="890.0" prefWidth="905.0" styleClass="post-background" stylesheets="@../../../resources/styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <HBox prefHeight="65.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fitHeight="67.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../Downloads/Pink%20Bold%20Retro%20Aesthetic%20Makeup%20Artist%20Circle%20Logo.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="42.0" fitWidth="25.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../Desktop/Skärmavbild%202024-05-08%20kl.%2011.55.50.png" />
+               </image>
+            </ImageView>
+            <Pane prefHeight="65.0" prefWidth="113.0" />
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="42.0" fitWidth="25.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../../../../../Desktop/Skärmavbild%202024-05-08%20kl.%2011.55.50.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </HBox>
+            <Button ellipsisString="" mnemonicParsing="false" prefHeight="45.0" prefWidth="45.0">
+               <styleClass>
+                  <String fx:value="round-button" />
+                  <String fx:value="round-button" />
+               </styleClass>
+            </Button>
+         </children>
+      </HBox>
+   </top>
+</BorderPane>
