--- a/src/main/java/resources/styles.css
+++ b/src/main/java/resources/styles.css
@@ -1,3 +1,7 @@
+
+
+
+/* feed */
 .post-background {
     -fx-background-color: #fff;
     -fx-background-radius: 15;
@@ -21,9 +25,4 @@
 .round-button {
     -fx-background-color: #ffffff;
     -fx-background-radius: 50;
-    -fx-effect: dropShadow(three-pass-box, rgba(0, 0, 0, 0.1), 5.0, 0.0, 0.0, 5.0);
-    -fx-text-fill: #333333;
-    -fx-padding: 10px 20px;
-    -fx-font-size: 16px;
-    -fx-font-weight: bold;
 }
