--- a/src/main/java/com/example/stuwebapp/Loggin.fxml
+++ b/src/main/java/com/example/stuwebapp/Loggin.fxml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.stuwebapp.Loggin"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.stuwebapp.loginController">
+    <children>
+        <TextField fx:id="username" layoutX="300.0" layoutY="149.0" promptText="Username..." />
+        <PasswordField fx:id="password" layoutX="300.0" layoutY="188.0" promptText="Password..." />
+        <Button fx:id="registerButton" layoutX="321.0" layoutY="335.0" mnemonicParsing="false" onAction="#onRegister" text="Create an account" />
+        <Text layoutX="302.0" layoutY="313.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Are you new? Sign up here!" wrappingWidth="150.21630859375">
+            <font>
+                <Font name="System Bold" size="13.0" />
+            </font>
+        </Text>
+        <Button fx:id="loginButton" layoutX="485.0" layoutY="189.0" mnemonicParsing="false" onAction="#onLogin" text="Login" />
+        <Text layoutX="288.0" layoutY="76.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Secure Login">
+            <font>
+                <Font size="36.0" />
+            </font>
+        </Text>
+      <ImageView fitHeight="400.0" fitWidth="236.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../../../../OneDrive/Skrivbord/Stureal.png" />
+         </image>
+      </ImageView>
+    </children>
 </AnchorPane>
