--- a/src/main/java/fxml/feed2.fxml
+++ b/src/main/java/fxml/feed2.fxml
@@ -3,7 +3,6 @@
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -14,18 +13,21 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="600.0" stylesheets="@../resources/styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <top>
-      <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="600.0" styleClass="white-background" stylesheets="@../resources/styles.css" BorderPane.alignment="TOP_CENTER">
+      <HBox alignment="CENTER_LEFT" prefHeight="93.0" prefWidth="600.0" styleClass="white-background" stylesheets="@../resources/styles.css" BorderPane.alignment="TOP_CENTER">
          <children>
             <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../image/Skärmavbild%202024-05-08%20kl.%2016.30.58.png" />
+                  <Image url="@../image/logo2.png" />
                </image>
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
             </ImageView>
             <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" styleClass="round-button" />
-            <Pane prefHeight="65.0" prefWidth="160.0" />
+            <Pane prefHeight="60.0" prefWidth="33.0" />
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="100.0">
                <children>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../image/company.png" />
                      </image>
@@ -44,7 +46,7 @@
             </HBox>
             <Pane prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="60.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="96.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../image/search.png" />
                      </image>
@@ -57,31 +59,37 @@
       <String fx:value="post-background" />
       <String fx:value="body-background" />
    </styleClass>
-   <left>
-      <ScrollPane prefHeight="835.0" prefWidth="126.0" BorderPane.alignment="CENTER" />
-   </left>
    <center>
       <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox prefHeight="835.0" prefWidth="402.0">
+            <VBox prefHeight="830.0" prefWidth="599.0">
                <children>
-                  <HBox prefHeight="73.0" prefWidth="200.0" styleClass="post-background" stylesheets="@../resources/styles.css">
+                  <HBox alignment="CENTER" prefHeight="112.0" prefWidth="437.0" styleClass="post-background" stylesheets="@../resources/styles.css">
                      <children>
-                        <ImageView fitHeight="39.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../image/Skärmavbild%202024-05-08%20kl.%2015.54.19.png" />
+                              <Image url="@../image/girl.png" />
                            </image>
+                           <HBox.margin>
+                              <Insets right="10.0" />
+                           </HBox.margin>
                         </ImageView>
-                        <TextField prefHeight="26.0" prefWidth="271.0" promptText="SÄG NÅGOT DÅ" />
+                        <TextField prefHeight="50.0" prefWidth="440.0" promptText="Berätta om ditt event" styleClass="text-field" stylesheets="@../resources/styles.css" />
                      </children>
                      <VBox.margin>
-                        <Insets />
+                        <Insets top="18.0" />
                      </VBox.margin>
                   </HBox>
                </children>
             </VBox>
-            <Pane prefHeight="835.0" prefWidth="106.0" />
+            <Pane prefHeight="830.0" prefWidth="86.0" />
          </children>
       </HBox>
    </center>
+   <left>
+      <Pane prefHeight="830.0" prefWidth="23.0" BorderPane.alignment="CENTER" />
+   </left>
+   <bottom>
+      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="body-background" stylesheets="@../resources/styles.css" BorderPane.alignment="CENTER" />
+   </bottom>
 </BorderPane>
