--- a/src/main/java/fxml/feed2.fxml
+++ b/src/main/java/fxml/feed2.fxml
@@ -2,7 +2,6 @@
 
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -20,35 +19,37 @@
                   <Image url="@../image/logo2.png" />
                </image>
                <HBox.margin>
-                  <Insets left="10.0" />
+                  <Insets left="15.0" />
                </HBox.margin>
             </ImageView>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" styleClass="round-button" />
-            <Pane prefHeight="60.0" prefWidth="33.0" />
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="100.0">
+            <Pane prefHeight="93.0" prefWidth="121.0" />
+            <HBox alignment="CENTER_LEFT" prefHeight="93.0" prefWidth="299.0" spacing="50.0">
                <children>
-                  <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../image/company.png" />
+                        <Image url="@../image/chat1.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="38.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../image/chatt.png" />
+                        <Image url="@../image/calander2.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="45.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../image/calander.png" />
+                        <Image url="@../image/company2.png" />
                      </image>
                   </ImageView>
                </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
             </HBox>
-            <Pane prefHeight="200.0" prefWidth="200.0">
+            <Pane prefHeight="93.0" prefWidth="153.0">
                <children>
-                  <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="96.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="39.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../image/search.png" />
+                        <Image url="@../image/search2.png" />
                      </image>
                   </ImageView>
                </children></Pane>
