--- a/src/main/java/resources/styles.css
+++ b/src/main/java/resources/styles.css
@@ -3,7 +3,7 @@
 
 /* feed */
 .post-background {
-    -fx-background-color: #fff;
+    -fx-background-color: #fffcfc;
     -fx-background-radius: 15;
     -fx-effect: dropShadow(three-pass-box, rgba(0, 0, 0, 0.1), 5.0, 0.0, 0.0, 5.0);
 }
@@ -34,5 +34,10 @@
 
 /* Body background */
 .body-background {
-    -fx-background-color: #e5f6f4;
+    -fx-background-color: rgb(28, 48, 87);
+}
+
+.text-field {
+    -fx-background-color:#F0F2F5;
+    -fx-background-radius:50;
 }
