--- a/src/main/java/fxml/flow.fxml
+++ b/src/main/java/fxml/flow.fxml
@@ -10,13 +10,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="754.0" prefWidth="565.0" styleClass="post-background" stylesheets="@../resources/styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PostController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="653.0" prefWidth="565.0" styleClass="post-background" stylesheets="@../resources/styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PostController">
    <children>
       <HBox alignment="TOP_CENTER" prefHeight="60.0">
          <children>
             <ImageView fx:id="imgProfile" fitHeight="64.0" fitWidth="64.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../../15294984_18.jpg" />
+                  <Image url="@../image/profilbild.jpg" />
                </image>
                <HBox.margin>
                   <Insets bottom="10.0" right="10.0" top="10.0" />
@@ -74,27 +74,40 @@
             <Font size="17.0" />
          </font>
       </Label>
-      <ImageView fx:id="imgPost" fitHeight="529.0" fitWidth="524.0" pickOnBounds="true" preserveRatio="true">
-         <VBox.margin>
-            <Insets left="20.0" top="30.0" />
-         </VBox.margin></ImageView>
-      <StackPane prefHeight="150.0" prefWidth="200.0">
+      <StackPane prefHeight="123.0" prefWidth="565.0">
          <children>
             <HBox prefHeight="100.0" prefWidth="200.0" />
-            <HBox stylesheets="@../resources/styles.css">
+            <HBox minHeight="-Infinity" prefHeight="75.0" prefWidth="542.0" stylesheets="@../resources/styles.css">
+               <opaqueInsets>
+                  <Insets bottom="10.0" left="10.0" />
+               </opaqueInsets>
+               <padding>
+                  <Insets left="15.0" top="10.0" />
+               </padding>
                <children>
-                  <HBox alignment="CENTER" />
+                  <Label minHeight="-Infinity" prefHeight="50.0" prefWidth="530.0" text="Text text text,Text text textText text textText text textText text textText text textText text textText text textText">
+                     <padding>
+                        <Insets left="2.0" />
+                     </padding>
+                  </Label>
                </children>
             </HBox>
          </children>
       </StackPane>
+      <ImageView fx:id="imgPost" fitHeight="529.0" fitWidth="524.0" pickOnBounds="true" preserveRatio="true">
+         <VBox.margin>
+            <Insets bottom="30.0" left="20.0" top="10.0" />
+         </VBox.margin>
+         <image>
+            <Image url="@../image/gif2-4.png" />
+         </image></ImageView>
       <HBox fx:id="ReaktionBorder" prefHeight="100.0" prefWidth="200.0" styleClass="reaction-border" stylesheets="@../resources/styles.css">
          <children>
             <HBox fx:id="likeContainer" prefHeight="100.0" prefWidth="165.0">
                <children>
-                  <ImageView fitHeight="32.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="27.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../../../3185466.png" />
+                        <Image url="@../image/3185466.png" />
                      </image>
                      <HBox.margin>
                         <Insets left="30.0" />
@@ -115,9 +128,9 @@
             </HBox>
             <HBox fx:id="nbComments" prefHeight="55.0" prefWidth="218.0">
                <children>
-                  <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="36.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../../../960857.png" />
+                        <Image url="@../image/960857.png" />
                      </image>
                      <HBox.margin>
                         <Insets left="40.0" />
@@ -138,9 +151,9 @@
             </HBox>
             <HBox prefHeight="55.0" prefWidth="200.0">
                <children>
-                  <ImageView fitHeight="30.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="25.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../../../5453057.png" />
+                        <Image url="@../image/5453057.png" />
                      </image>
                      <HBox.margin>
                         <Insets left="40.0" />
