--- a/src/main/java/fxml/flow.fxml
+++ b/src/main/java/fxml/flow.fxml
@@ -34,7 +34,7 @@
                            </font></Label>
                         <ImageView fx:id="imgVerified" fitHeight="21.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../../../9918694.png" />
+                              <Image url="@../image/9918694.png" />
                            </image>
                            <HBox.margin>
                               <Insets left="5.0" right="5.0" top="10.0" />
@@ -56,7 +56,7 @@
                <children>
                   <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="82.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../../../images.png" />
+                        <Image url="@../image/2311523.png" />
                      </image>
                   </ImageView>
                </children>
