--- a/src/main/java/resources/styles.css
+++ b/src/main/java/resources/styles.css
@@ -44,3 +44,6 @@
     -fx-background-color:#F0F2F5;
     -fx-background-radius:50;
 }
+.scroll-pane > viewport {
+    -fx-background-color: transparent;
+}
