--- a/src/main/java/fxml/feed2.fxml
+++ b/src/main/java/fxml/feed2.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="600.0" stylesheets="@../resources/styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="600.0" stylesheets="@../resources/styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.FeedController">
    <top>
       <HBox alignment="CENTER_LEFT" prefHeight="93.0" prefWidth="600.0" styleClass="white-background" stylesheets="@../resources/styles.css" BorderPane.alignment="TOP_CENTER">
          <children>
